--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,51 @@
     transform: rotate(360deg);
   }
 }
+
+.header{
+  text-align: center;
+  color: white;
+  font-size: 30px;
+}
+
+
+.image-grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.image-button {
+  display: block;
+  margin-top: 4px;
+}
+.caption-input {
+  width: 80%;
+  padding: 6px;
+  font-size: 16px;
+  border: none;
+  border-radius: 3px;
+  background-color: #f2f2f2;
+  margin-top: 8px;
+}
+.navbar-nav li a {
+  font-size: 30px;
+  margin-left: 10px;
+  margin-right: 10px;
+
+}
+
+.dimmed-screen {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.justified-text {
+  text-align: justify;
+}
+
