--- a/src/App.css
+++ b/src/App.css
@@ -14,14 +14,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #186A3B;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
+
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color:  #186A3B;
 }
 
 .App-link {
@@ -36,85 +36,113 @@
     transform: rotate(360deg);
   }
 }
-.navbar {
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: sans-serif;
+}
+select {
+  background-color: #145A32
+}
+
+header {
+  height: 58px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.07), 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+  color: #145A32;
+}
+
+.nav-area {
   display: flex;
-  justify-content: center;
   align-items: center;
-  border-radius: 4px;
-  background-color: #eceff1;
-}
-
-.navbar__link {
-  margin: 1em;
-  font-size: 2em;
-  font-family: 'Roboto', sans-serif;
-  cursor: pointer;
-  text-decoration: none;
-  letter-spacing: .3em;
-  text-indent: .3em;
-  color: #181818;
-  border-bottom: 3px solid transparent;
-}
-
-.navbar__link:hover {
-  transform: translateY(-2px);
-}
-
-.navbar__link--active {
-  border-bottom: 3px solid #29b6f6;
-  transition: border-bottom .5s ease-in-out;
-}
-.navbar-nav,
-.mr-auto {
-flex: 1;
-margin: auto !important;
-display: flex;
-justify-content: space-between;
-}
-.header{
-  text-align: center;
-  color: white;
-  font-size: 30px;
-}
-
-
-.image-grid {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-
-img {
   max-width: 100%;
-  height: auto;
+  margin: 0 0;
+  padding: 0 20px;
+  height: 58px;
 }
 
-.image-button {
+.logo {
+  text-decoration: none;
+  font-size: 25px;
+  color: inherit;
+  margin-right: 20px;
+}
+
+.menus {
+  display: flex;
+  list-style: none;
+  
+}
+
+.menu-items {
+  position: relative;
+  font-size: 14px;
+
+}
+
+.menu-items a {
   display: block;
-  margin-top: 4px;
+  font-size: inherit;
+  color: inherit;
+  text-decoration: none;
 }
-.caption-input {
-  width: 80%;
-  padding: 6px;
-  font-size: 16px;
+
+.menu-items button {
+  color: inherit;
+  font-size: inherit;
   border: none;
-  border-radius: 3px;
-  background-color: #f2f2f2;
-  margin-top: 8px;
-}
-.navbar-nav li a {
-  font-size: 30px;
-  margin-left: 10px;
-  margin-right: 10px;
-
+  background-color: transparent;
+  cursor: pointer;
+  width: 100%;
 }
 
-.dimmed-screen {
-  pointer-events: none;
-  opacity: 0.5;
+.menu-items a,
+.menu-items button {
+  text-align: left;
+  padding: 0.7rem 1rem;
 }
 
-.justified-text {
-  text-align: justify;
+.menu-items a:hover,
+.menu-items button:hover {
+  background-color: transparent;
 }
 
+.arrow::after {
+  content: "";
+  display: inline-block;
+  margin-left: 0.28em;
+  vertical-align: 0.09em;
+  border-top: 0.42em solid;
+  border-right: 0.32em solid transparent;
+  border-left: 0.32em solid transparent;
+}
+
+.dropdown {
+  position: absolute;
+  right: 0;
+  left: auto;
+  box-shadow: 0 10px 15px -3px rgba(46, 41, 51, 0.08),
+    0 4px 6px -2px rgba(71, 63, 79, 0.16);
+  font-size: 0.875rem;
+  z-index: 9999;
+  min-width: 10rem;
+  padding: 0.5rem 0;
+  list-style: none;
+  background-color: 	transparent;
+  border-radius: 0.5rem;
+  display: none;
+}
+
+.dropdown.show {
+  display: block;
+}
+
+.dropdown .dropdown-submenu {
+  position: absolute;
+  left: 100%;
+  top: -7px;
+}
